[project]
name = "Sales Tax Calculator"
version = "0.0.1"
authors = [
  { name="Bella Lawrence", email="linwood.lawrence@students.sacs.k12.in.us" },
]
description = "A calculator for sales tax"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Bella288/SalesTax"
Issues = "https://github.com/Bella288/SalesTax/issues"
